# nlp_scripts

./: pyproject.toml
src/: alice.py
